Fix bug with tags
* avoid line break on catalog page

--- a/themes/lecture2go-theme/docroot/_diffs/css/l2go.css
+++ b/themes/lecture2go-theme/docroot/_diffs/css/l2go.css
@@ -434,7 +434,7 @@ p.smallitalic {
 .video-content-footer .labels .label {
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 50%;
+    max-width: 49%;
 }
 
 .video-image-big {
@@ -714,6 +714,7 @@ p.smallitalic {
 
 .videotile.wide .labels {
     margin-bottom: 10px;
+    padding-right: 35px;
 }
 
 .term-of-creation{
